--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,9 @@
 
         .testimonial-card {
             background: rgba(255, 255, 255, 0.1);
+            background: rgba(13, 74, 111, 0.4); /* Fallback for browsers that don't support backdrop-filter */
             backdrop-filter: blur(25px);
+            -webkit-backdrop-filter: blur(25px); /* Safari support */
             padding: 3rem;
             border-radius: 32px;
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
@@ -1101,6 +1103,13 @@
             position: relative;
             border: 2px solid rgba(255, 255, 255, 0.15);
             overflow: hidden;
+        }
+
+        /* Better browser support */
+        @supports (backdrop-filter: blur(25px)) or (-webkit-backdrop-filter: blur(25px)) {
+            .testimonial-card {
+                background: rgba(255, 255, 255, 0.1);
+            }
         }
 
         .testimonial-card::before {
@@ -2078,7 +2087,7 @@
         <div class="testimonials-container">
             <div class="section-header">
                 <span class="section-badge">Testimonials</span>
-                <h2>What Our Clients Say</h2>
+                <h2>What Our Clients Say - ✨ NEW DESIGN ✨</h2>
                 <p>Trusted by industry leaders worldwide</p>
             </div>
             <div class="testimonials-grid">
